fixed suggestion buttons not working on mobile

--- a/public/app/views/ICE/css/cEmoji.css
+++ b/public/app/views/ICE/css/cEmoji.css
@@ -172,7 +172,7 @@ li input.active{
 
 /* Keyboard */
 
-@media screen and (max-width: 732px) {
+@media screen and (max-width: 513px) {
     #tools_shapelib {
         width: 100% !important;
         margin-left: -47px !important;
